<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#FFFFFF">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/view_sample"
                android:src="@drawable/book1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_margin="10dp"
                    android:text="@string/searchview" />

                <TextView
                    android:id="@+id/text_details"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_margin="10dp"
                    android:text="@string/details"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="italic" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>